# django-zendesk-tickets

./: .travis.yml  LICENSE  LICENSE.txt  MANIFEST.in  Makefile  README.rst  requirements-release.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: release.yml  test.yml
scripts/: messages.py
tests/: __init__.py  __main__.py  test_class_views.py  test_code_style.py  test_views.py  urls.py  utils.py
tests/templates/: submit_ticket.html  success.html
zendesk_tickets/: __init__.py  client.py  forms.py  setup_extensions.py  views.py
zendesk_tickets/locale/cy/LC_MESSAGES/: django.po
zendesk_tickets/locale/en_GB/LC_MESSAGES/: django.po
zendesk_tickets/templates/zendesk_tickets/: ticket.txt
zendesk_tickets/tests/: __init__.py  test_views.py  urls.py
