[metadata]
name = django-zendesk-tickets
version = attr: zendesk_tickets.__version__
url = https://github.com/ministryofjustice/django-zendesk-tickets
author = Ministry of Justice Digital & Technology
author_email = dev@digital.justice.gov.uk
description = Django views and forms that submit tickets to Zendesk
long_description = file: README.rst
license = MIT
keywords =
    django
    tickets
    zendesk
classifiers =
    Development Status :: 4 - Beta
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
; NB: looser python version requirement than what's tested
python_requires = >=3.6
packages =
    zendesk_tickets
    zendesk_tickets.locale.cy.LC_MESSAGES
    zendesk_tickets.locale.en_GB.LC_MESSAGES
    zendesk_tickets.templates.zendesk_tickets
include_package_data = true
setup_requires =
    Django>=2.2,<4.3
install_requires =
    Django>=2.2,<4.3
    requests
test_suite = tests.run

[flake8]
exclude = .git/,.eggs/,.tox/,build/,dist/,env/,venv/
max-complexity = 10
max-line-length = 120

[coverage:run]
omit =
    setup.py
    */tests/*
    .eggs/*
    .tox/*
